--- a/tests/angular2-compilers-tests/client/imports/app/app.html
+++ b/tests/angular2-compilers-tests/client/imports/app/app.html
@@ -1,1 +1,3 @@
-<p class="greeting" [innerHTML]="greetingText"></p>
+<h2>Value: {{ value }}</h2>
+<button class="increment" (click)="onIncrementClick()">+</button>
+<button class="decrement" (click)="onDecrementClick()">-</button>
