[angular-compilers] test scripts added to bare example

--- a/examples/MeteorCLI/bare/client/imports/app/todo-list/todo-list.html
+++ b/examples/MeteorCLI/bare/client/imports/app/todo-list/todo-list.html
@@ -1,4 +1,4 @@
-<a routerLink="/todoAdd">Add</a>
+<a routerLink="/todoAdd" class="addBtn">Add</a>
 <ul>
   <li *ngFor="let todo of todos | async">
     {{todo.content}}
